[project]
name = "hotels-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that allows LLMs to search for hotels and destinations using the Booking.com API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx",
    "python-dotenv",
]

[project.scripts]
hotels-mcp-server = "hotels_mcp.hotels_server:main"
